jsoup changelog

*** Release 1.8.3 [PENDING]
 * Added support for custom boolean attributes.
   <https://github.com/jhy/jsoup/pull/555>

 * When fetching XML URLs, automatically switch to the XML parser instead of the HTML parser.
   <https://github.com/jhy/jsoup/pull/574>
   
 * Fixed an issue in Element.getElementSiblingIndex (and related methods) where sibling elements with the same content
   would incorrectly have the same sibling index.
   <https://github.com/jhy/jsoup/issues/554>

 * Fixed an issue where unexpected elements in a badly nested table could be moved to the wrong location in the
   document.
   <https://github.com/jhy/jsoup/issues/552>

 * Fixed an issue where a table nested within a TH cell would parse to an incorrect tree.
   <https://github.com/jhy/jsoup/issues/575>

 * When serializing a document using the XHTML encoding entities, if the character set did not support &nbsp; chars
   (such as Shit_JIS), the character would be skipped. For visibility, will now always output &xa0; when using XHTML
   encoding entities (as &nbsp; is not defined), regardless of the output character set.
   <https://github.com/jhy/jsoup/issues/523>

 * Fixed an issue when resolving URLs, if the absolute URL had no path, the relative URL was not normalized correctly.
   Also fixed an issue where connections that were redirected to a relative URL did not have the same normalization
   rules as a URL read from Nodes.absUrl(String).
   <https://github.com/jhy/jsoup/issues/585>

 * When serialising XML, ensure that '<' characters in attributes are escaped, per spec. Not required in HTML.
   <https://github.com/jhy/jsoup/issues/528>

*** Release 1.8.2 [2015-Apr-13]
 * Performance improvements for parsing HTML on Android, of 1.5x to 1.9x, with larger parses getting a bigger
   speed increase. For non-Android JREs, around 1.1x to 1.2x.

 * Dramatic performance improvement in HTML serialization on Android (KitKat and later), of 115x. Improvement by working