@@ -271,7 +271,51 @@ enum HtmlTreeBuilderState {
                 case StartTag:
                     Token.StartTag startTag = t.asStartTag();
                     String name = startTag.name();
-                    if (name.equals("html")) {
+                    if (name.equals("a")) {
+                        if (tb.getActiveFormattingElement("a") != null) {
+                            tb.error(this);
+                            tb.processEndTag("a");
+
+                            // still on stack?
+                            Element remainingA = tb.getFromStack("a");
+                            if (remainingA != null) {
+                                tb.removeFromActiveFormattingElements(remainingA);
+                                tb.removeFromStack(remainingA);
+                            }
+                        }
+                        tb.reconstructFormattingElements();
+                        Element a = tb.insert(startTag);
+                        tb.pushActiveFormattingElements(a);
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartEmptyFormatters)) {
+                        tb.reconstructFormattingElements();
+                        tb.insertEmpty(startTag);
+                        tb.framesetOk(false);
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartPClosers)) {
+                        if (tb.inButtonScope("p")) {
+                            tb.processEndTag("p");
+                        }
+                        tb.insert(startTag);
+                    } else if (name.equals("span")) {
+                        // same as final else, but short circuits lots of checks
+                        tb.reconstructFormattingElements();
+                        tb.insert(startTag);
+                    } else if (name.equals("li")) {
+                        tb.framesetOk(false);
+                        ArrayList<Element> stack = tb.getStack();
+                        for (int i = stack.size() - 1; i > 0; i--) {
+                            Element el = stack.get(i);
+                            if (el.nodeName().equals("li")) {
+                                tb.processEndTag("li");
+                                break;
+                            }
+                            if (tb.isSpecial(el) && !StringUtil.inSorted(el.nodeName(), Constants.InBodyStartLiBreakers))
+                                break;
+                        }
+                        if (tb.inButtonScope("p")) {
+                            tb.processEndTag("p");
+                        }
+                        tb.insert(startTag);
+                    } else if (name.equals("html")) {
                         tb.error(this);
                         // merge attributes onto real html
                         Element html = tb.getStack().get(0);
@@ -279,7 +323,7 @@ enum HtmlTreeBuilderState {
                             if (!html.hasAttr(attribute.getKey()))
                                 html.attributes().put(attribute);
                         }
-                    } else if (StringUtil.in(name, Constants.InBodyStartToHead)) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartToHead)) {
                         return tb.process(t, InHead);
                     } else if (name.equals("body")) {
                         tb.error(this);
@@ -313,21 +357,16 @@ enum HtmlTreeBuilderState {
                             tb.insert(startTag);
                             tb.transition(InFrameset);
                         }
-                    } else if (StringUtil.in(name, Constants.InBodyStartPClosers)) {
+                    } else if (StringUtil.inSorted(name, Constants.Headings)) {
                         if (tb.inButtonScope("p")) {
                             tb.processEndTag("p");
                         }
-                        tb.insert(startTag);
-                    } else if (StringUtil.in(name, Constants.Headings)) {
-                        if (tb.inButtonScope("p")) {
-                            tb.processEndTag("p");
-                        }
-                        if (StringUtil.in(tb.currentElement().nodeName(), Constants.Headings)) {
+                        if (StringUtil.inSorted(tb.currentElement().nodeName(), Constants.Headings)) {
                             tb.error(this);
                             tb.pop();
                         }
                         tb.insert(startTag);
-                    } else if (StringUtil.in(name, Constants.InBodyStartPreListing)) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartPreListing)) {
                         if (tb.inButtonScope("p")) {
                             tb.processEndTag("p");
                         }
@@ -343,32 +382,16 @@ enum HtmlTreeBuilderState {
                             tb.processEndTag("p");
                         }
                         tb.insertForm(startTag, true);
-                    } else if (name.equals("li")) {
+                    } else if (StringUtil.inSorted(name, Constants.DdDt)) {
                         tb.framesetOk(false);
                         ArrayList<Element> stack = tb.getStack();
                         for (int i = stack.size() - 1; i > 0; i--) {
                             Element el = stack.get(i);
-                            if (el.nodeName().equals("li")) {
-                                tb.processEndTag("li");
-                                break;
-                            }
-                            if (tb.isSpecial(el) && !StringUtil.in(el.nodeName(), Constants.InBodyStartLiBreakers))
-                                break;
-                        }
-                        if (tb.inButtonScope("p")) {
-                            tb.processEndTag("p");
-                        }
-                        tb.insert(startTag);
-                    } else if (StringUtil.in(name, Constants.DdDt)) {
-                        tb.framesetOk(false);
-                        ArrayList<Element> stack = tb.getStack();
-                        for (int i = stack.size() - 1; i > 0; i--) {
-                            Element el = stack.get(i);
-                            if (StringUtil.in(el.nodeName(), Constants.DdDt)) {
+                            if (StringUtil.inSorted(el.nodeName(), Constants.DdDt)) {
                                 tb.processEndTag(el.nodeName());
                                 break;
                             }
-                            if (tb.isSpecial(el) && !StringUtil.in(el.nodeName(), Constants.InBodyStartLiBreakers))
+                            if (tb.isSpecial(el) && !StringUtil.inSorted(el.nodeName(), Constants.InBodyStartLiBreakers))
                                 break;
                         }
                         if (tb.inButtonScope("p")) {
@@ -392,22 +415,7 @@ enum HtmlTreeBuilderState {
                             tb.insert(startTag);
                             tb.framesetOk(false);
                         }
-                    } else if (name.equals("a")) {
-                        if (tb.getActiveFormattingElement("a") != null) {
-                            tb.error(this);
-                            tb.processEndTag("a");
-
-                            // still on stack?
-                            Element remainingA = tb.getFromStack("a");
-                            if (remainingA != null) {
-                                tb.removeFromActiveFormattingElements(remainingA);
-                                tb.removeFromStack(remainingA);
-                            }
-                        }
-                        tb.reconstructFormattingElements();
-                        Element a = tb.insert(startTag);
-                        tb.pushActiveFormattingElements(a);
-                    } else if (StringUtil.in(name, Constants.Formatters)) {
+                    } else if (StringUtil.inSorted(name, Constants.Formatters)) {
                         tb.reconstructFormattingElements();
                         Element el = tb.insert(startTag);
                         tb.pushActiveFormattingElements(el);
@@ -420,7 +428,7 @@ enum HtmlTreeBuilderState {
                         }
                         Element el = tb.insert(startTag);
                         tb.pushActiveFormattingElements(el);
-                    } else if (StringUtil.in(name, Constants.InBodyStartApplets)) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartApplets)) {
                         tb.reconstructFormattingElements();
                         tb.insert(startTag);
                         tb.insertMarkerToFormattingElements();
@@ -432,16 +440,12 @@ enum HtmlTreeBuilderState {
                         tb.insert(startTag);
                         tb.framesetOk(false);
                         tb.transition(InTable);
-                    } else if (StringUtil.in(name, Constants.InBodyStartEmptyFormatters)) {
-                        tb.reconstructFormattingElements();
-                        tb.insertEmpty(startTag);
-                        tb.framesetOk(false);
                     } else if (name.equals("input")) {
                         tb.reconstructFormattingElements();
                         Element el = tb.insertEmpty(startTag);
                         if (!el.attr("type").equalsIgnoreCase("hidden"))
                             tb.framesetOk(false);
-                    } else if (StringUtil.in(name, Constants.InBodyStartMedia)) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartMedia)) {
                         tb.insertEmpty(startTag);
                     } else if (name.equals("hr")) {
                         if (tb.inButtonScope("p")) {
@@ -478,7 +482,7 @@ enum HtmlTreeBuilderState {
                         // input
                         Attributes inputAttribs = new Attributes();
                         for (Attribute attr : startTag.attributes) {
-                            if (!StringUtil.in(attr.getKey(), Constants.InBodyStartInputAttribs))
+                            if (!StringUtil.inSorted(attr.getKey(), Constants.InBodyStartInputAttribs))
                                 inputAttribs.put(attr);
                         }
                         inputAttribs.put("name", "isindex");
@@ -516,12 +520,12 @@ enum HtmlTreeBuilderState {
                             tb.transition(InSelectInTable);
                         else
                             tb.transition(InSelect);
-                    } else if (StringUtil.in(name, Constants.InBodyStartOptions)) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartOptions)) {
                         if (tb.currentElement().nodeName().equals("option"))
                             tb.processEndTag("option");
                         tb.reconstructFormattingElements();
                         tb.insert(startTag);
-                    } else if (StringUtil.in(name, Constants.InBodyStartRuby)) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartRuby)) {
                         if (tb.inScope("ruby")) {
                             tb.generateImpliedEndTags();
                             if (!tb.currentElement().nodeName().equals("ruby")) {
@@ -540,7 +544,7 @@ enum HtmlTreeBuilderState {
                         // todo: handle A start tag whose tag name is "svg" (xlink, svg)
                         tb.insert(startTag);
                         tb.tokeniser.acknowledgeSelfClosingFlag();
-                    } else if (StringUtil.in(name, Constants.InBodyStartDrop)) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartDrop)) {
                         tb.error(this);
                         return false;
                     } else {
@@ -552,87 +556,7 @@ enum HtmlTreeBuilderState {
                 case EndTag:
                     Token.EndTag endTag = t.asEndTag();
                     name = endTag.name();
-                    if (name.equals("body")) {
-                        if (!tb.inScope("body")) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            // todo: error if stack contains something not dd, dt, li, optgroup, option, p, rp, rt, tbody, td, tfoot, th, thead, tr, body, html
-                            tb.transition(AfterBody);
-                        }
-                    } else if (name.equals("html")) {
-                        boolean notIgnored = tb.processEndTag("body");
-                        if (notIgnored)
-                            return tb.process(endTag);
-                    } else if (StringUtil.in(name, Constants.InBodyEndClosers)) {
-                        if (!tb.inScope(name)) {
-                            // nothing to close
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags();
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(name);
-                        }
-                    } else if (name.equals("form")) {
-                        Element currentForm = tb.getFormElement();
-                        tb.setFormElement(null);
-                        if (currentForm == null || !tb.inScope(name)) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags();
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            // remove currentForm from stack. will shift anything under up.
-                            tb.removeFromStack(currentForm);
-                        }
-                    } else if (name.equals("p")) {
-                        if (!tb.inButtonScope(name)) {
-                            tb.error(this);
-                            tb.processStartTag(name); // if no p to close, creates an empty <p></p>
-                            return tb.process(endTag);
-                        } else {
-                            tb.generateImpliedEndTags(name);
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(name);
-                        }
-                    } else if (name.equals("li")) {
-                        if (!tb.inListItemScope(name)) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags(name);
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(name);
-                        }
-                    } else if (StringUtil.in(name, Constants.DdDt)) {
-                        if (!tb.inScope(name)) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags(name);
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(name);
-                        }
-                    } else if (StringUtil.in(name, Constants.Headings)) {
-                        if (!tb.inScope(Constants.Headings)) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags(name);
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(Constants.Headings);
-                        }
-                    } else if (name.equals("sarcasm")) {
-                        // *sigh*
-                        return anyOtherEndTag(t, tb);
-                    } else if (StringUtil.in(name, Constants.InBodyEndAdoptionFormatters)) {
+                    if (StringUtil.inSorted(name, Constants.InBodyEndAdoptionFormatters)) {
                         // Adoption Agency Algorithm.
                         for (int i = 0; i < 8; i++) {
                             Element formatEl = tb.getActiveFormattingElement(name);
@@ -700,7 +624,7 @@ enum HtmlTreeBuilderState {
                                 lastNode = node;
                             }
 
-                            if (StringUtil.in(commonAncestor.nodeName(), Constants.InBodyEndTableFosters)) {
+                            if (StringUtil.inSorted(commonAncestor.nodeName(), Constants.InBodyEndTableFosters)) {
                                 if (lastNode.parent() != null)
                                     lastNode.remove();
                                 tb.insertInFosterParent(lastNode);
@@ -722,7 +646,90 @@ enum HtmlTreeBuilderState {
                             tb.removeFromStack(formatEl);
                             tb.insertOnStackAfter(furthestBlock, adopter);
                         }
-                    } else if (StringUtil.in(name, Constants.InBodyStartApplets)) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyEndClosers)) {
+                        if (!tb.inScope(name)) {
+                            // nothing to close
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags();
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(name);
+                        }
+                    } else if (name.equals("span")) {
+                        // same as final fall through, but saves short circuit
+                        return anyOtherEndTag(t, tb);
+                    } else if (name.equals("li")) {
+                        if (!tb.inListItemScope(name)) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags(name);
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(name);
+                        }
+                    } else if (name.equals("body")) {
+                        if (!tb.inScope("body")) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            // todo: error if stack contains something not dd, dt, li, optgroup, option, p, rp, rt, tbody, td, tfoot, th, thead, tr, body, html
+                            tb.transition(AfterBody);
+                        }
+                    } else if (name.equals("html")) {
+                        boolean notIgnored = tb.processEndTag("body");
+                        if (notIgnored)
+                            return tb.process(endTag);
+                    } else if (name.equals("form")) {
+                        Element currentForm = tb.getFormElement();
+                        tb.setFormElement(null);
+                        if (currentForm == null || !tb.inScope(name)) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags();
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            // remove currentForm from stack. will shift anything under up.
+                            tb.removeFromStack(currentForm);
+                        }
+                    } else if (name.equals("p")) {
+                        if (!tb.inButtonScope(name)) {
+                            tb.error(this);
+                            tb.processStartTag(name); // if no p to close, creates an empty <p></p>
+                            return tb.process(endTag);
+                        } else {
+                            tb.generateImpliedEndTags(name);
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(name);
+                        }
+                    } else if (StringUtil.inSorted(name, Constants.DdDt)) {
+                        if (!tb.inScope(name)) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags(name);
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(name);
+                        }
+                    } else if (StringUtil.inSorted(name, Constants.Headings)) {
+                        if (!tb.inScope(Constants.Headings)) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags(name);
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(Constants.Headings);
+                        }
+                    } else if (name.equals("sarcasm")) {
+                        // *sigh*
+                        return anyOtherEndTag(t, tb);
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartApplets)) {
                         if (!tb.inScope("name")) {
                             if (!tb.inScope(name)) {
                                 tb.error(this);
